2009-10-26  Keishi Hattori  <casey.hattori@gmail.com>

Reviewed by Pavel Feldman.

        Fix for Console not showing repeat count when repeatedly logging an Event
        https://bugs.webkit.org/show_bug.cgi?id=30324

        * inspector/console-tests-expected.txt:
2009-10-26  Keishi Hattori  <casey.hattori@gmail.com>

        Reviewed by Pavel Feldman.

        Fix for Console not showing repeat count when repeatedly logging an Event
        https://bugs.webkit.org/show_bug.cgi?id=30324

        * inspector/ConsoleMessage.cpp:
        (WebCore::ConsoleMessage::addToConsole):
        (WebCore::ConsoleMessage::updateRepeatCountInConsole): Added.
        * inspector/ConsoleMessage.h:
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::addConsoleMessage): Calls updateRepeatCountInConsole if it is a repeating message.
        * inspector/InspectorFrontend.cpp:
        (WebCore::InspectorFrontend::addConsoleMessage): Renamed WebCore::InspectorFrontend::addMessageToConsole
        (WebCore::InspectorFrontend::updateConsoleMessageRepeatCount): Added. Called when repeatCount is incremented.
        * inspector/InspectorFrontend.h:
        * inspector/front-end/ConsoleView.js:
        (WebInspector.ConsoleView.prototype.addMessage): Removed calls to msg.isEqual.
        (WebInspector.ConsoleView.prototype.updateMessageRepeatCount): Added.
        (WebInspector.ConsoleView.prototype._incrementErrorWarningCount): Added. Updates the error/warning count.
        (WebInspector.ConsoleView.prototype.clearMessages):
        (WebInspector.ConsoleMessage):
        (WebInspector.ConsoleMessage.prototype.toMessageElement): Use ConsoleMessage._updateRepeatCount
        (WebInspector.ConsoleMessage.prototype._updateRepeatCount):
        * inspector/front-end/inspector.js:
        (WebInspector.addConsoleMessage): Renamed WebInspector.addMessageToConsole.
        (WebInspector.updateConsoleMessageRepeatCount): Added.

Canonical link: https://commits.webkit.org/41511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50064 268f45cc-cd09-0410-ab3c-d52691b4dbfc