WebCore/inspector/ConsoleMessage.h
@@ -49,6 +49,7 @@ namespace WebCore {
 
 #if ENABLE(INSPECTOR)
         void addToConsole(InspectorFrontend* frontend);
+        void updateRepeatCountInConsole(InspectorFrontend* frontend);
 #endif
         void incrementCount() { ++m_repeatCount; };
         bool isEqual(ScriptState*, ConsoleMessage* msg) const;
